--- a/DigitalRSVP.App/src/app/app.component.html
+++ b/DigitalRSVP.App/src/app/app.component.html
@@ -3,6 +3,6 @@
         <router-outlet></router-outlet>
     </div>
     <div class="footer">
-        
+        Jonathon Montgomery Copyright 2025
     </div>
 </main>
