--- a/DigitalRSVP.App/src/app/pages/rsvp/rsvp.component.css
+++ b/DigitalRSVP.App/src/app/pages/rsvp/rsvp.component.css
@@ -1,4 +1,77 @@
 .rsvp-main {
+    text-align: -webkit-center;
+    margin-top: 5vh;
+    font-size: large;
+    overflow-y: auto;
+    max-height: 85vh;
+    padding-left: 10%;
+    padding-right: 10%;
+}
+
+.rsvp-form-table {
     text-align: center;
-    margin-top: 20vh;
+    width: 80vw;
+    max-width: 500px;
+    margin-bottom: 3vh;
+}
+.rsvp-form-singular-column {
+    width: 100%;
+}
+.rsvp-form-label {
+    text-align: left;
+}
+.rsvp-form-input {
+
+}
+
+.rsvp-table-guests {
+    text-align: center;
+    width: 80vw;
+    max-width: 500px;
+    margin-bottom: 3vh;
+}
+
+.rsvp-label {
+
+}
+
+.rsvp-button {
+    margin-left: 2vw;
+    margin-right: 2vw;
+}
+.rsvp-button-add {
+    margin-left: 2vw;
+    margin-right: 2vw;
+    font-size: large;
+    background-color: rgb(0, 255, 0);
+    border-color: rgb(0, 151, 0);
+    border-radius: 5px;
+    color: rgb(0, 0, 0);
+}
+.rsvp-button-add:active {
+    margin-left: 2vw;
+    margin-right: 2vw;
+    font-size: large;
+    background-color: rgb(35, 187, 35);
+    border-color: rgb(6, 129, 6);
+    border-radius: 5px;
+    color: rgb(0, 0, 0);
+}
+.rsvp-button-remove {
+    margin-left: 2vw;
+    margin-right: 2vw;
+}
+.rsvp-button-img {
+    width: 80%;
+}
+
+.rsvp-note-input {
+    width: 80vw;
+    height: 15vh;
+    max-height: 150px;
+}
+
+.rsvp-dropdown {
+    border-radius: 5px;
+    font-size: large;
 }
