--- a/DigitalRSVP.App/src/app/pages/rsvp/rsvp.component.html
+++ b/DigitalRSVP.App/src/app/pages/rsvp/rsvp.component.html
@@ -48,4 +48,8 @@
         Send a personalized note or specify any Specialized Accomodations/Information you want us to know!
     </label>
     <textarea class="rsvp-note-input" id="noteInput"></textarea>
+
+    <button class="rsvp-button-add" (click)="submitRsvp()">
+        Submit
+    </button>
 </div>
