--- a/DigitalRSVP.App/src/app/pages/invite/invite.component.html
+++ b/DigitalRSVP.App/src/app/pages/invite/invite.component.html
@@ -1,5 +1,8 @@
-<div class="invite-main">
+<div class="invite-main" *ngIf="screenReady()">
     <img class="letterImg" src="assets/UnopenedLetter.png" (click)="openInvitation()"/>
     <h2>You've Received an Invitation!</h2>
     <h3>Click or Tap on it to Open!</h3>
+</div>
+<div class="loading-container" *ngIf="!screenReady()">
+    <h2>Loading...</h2>
 </div>
