--- a/DigitalRSVP.App/src/app/pages/notfound/notfound.component.html
+++ b/DigitalRSVP.App/src/app/pages/notfound/notfound.component.html
@@ -1,5 +1,5 @@
 <div class="notfound-main">
     <h1>Uh Oh!</h1>
-    <h3>No Invitation Was Found!</h3>
+    <h3>No Invitation was found or the connection timed out...</h3>
     <h3>Please Send us a Message for help if you continue to run into issues!</h3>
 </div>
